[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.146"
sdl2 = "0.35.2"
sdl2-sys = "0.35.2"
parking_lot = "0.12.1"
spin = "0.9.8"
windows = { version = "0.48.0", features = ["Win32_Media"] }

[lib]
crate-type=["staticlib"]